Enable fortify (missing releaseId)