@@ -311,6 +311,7 @@ dependencies {
   testImplementation group: 'io.rest-assured', name: 'rest-assured'
   testImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.2'
   testImplementation group: 'org.simplify4u', name: 'slf4j2-mock', version: '2.3.0'
+  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
@@ -488,3 +489,6 @@ generateCCDConfig.doLast {
     into layout.buildDirectory.dir('definitions/NFD')
   }
 }
+
+task fortifyScan(type: JavaExec) { main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp" classpath += sourceSets.test.runtimeClasspath jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'] }
+
